--- a/index.html
+++ b/index.html
@@ -46,12 +46,13 @@
 </header>
 
   <main>
-    <article>
+    <article id="produktinformationId">
+      <img src="" alt="">
       <a id="produktmaerkeId" href="https://salling.dk/brands/royal-copenhagen/c-1389/">ROYAL COPENHAGEN</a> <!-- Er et link til alle mærkets produkter -->
       <h1 id="beskrivelseAfProduktId">Stjerne Riflet 2-pak Krus, 33cl</h1>
-      <p>Farve: <span>Grøn</span></p> <!-- Der er lavet et span for at få teksten på samme linje og kunne ændre fonten på det enkelte element -->
-      <p>Størrelse: <span>33 cl</span></p>
-      <p></p>
+      <p id="farveId">Farve: <span id="grønSpan">Grøn</span></p> <!-- Der er lavet et span for at få teksten på samme linje og kunne ændre fonten på det enkelte element -->
+      <p id="størrelseId">Størrelse: <span id="clSpan">33 cl</span></p>
+      <p id="lagerstatusId">Lagerstatus: <span id="lagerSpan">På lager online og i <span>2 butikker</span></span></p>
 
     </article>
 
