--- a/index.html
+++ b/index.html
@@ -46,15 +46,20 @@
 </header>
 
   <main>
-    <article id="produktinformationId">
-      <img src="" alt="">
-      <a id="produktmaerkeId" href="https://salling.dk/brands/royal-copenhagen/c-1389/">ROYAL COPENHAGEN</a> <!-- Er et link til alle mærkets produkter -->
-      <h1 id="beskrivelseAfProduktId">Stjerne Riflet 2-pak Krus, 33cl</h1>
-      <p id="farveId">Farve: <span id="grønSpan">Grøn</span></p> <!-- Der er lavet et span for at få teksten på samme linje og kunne ændre fonten på det enkelte element -->
-      <p id="størrelseId">Størrelse: <span id="clSpan">33 cl</span></p>
-      <p id="lagerstatusId">Lagerstatus: <span id="lagerSpan">På lager online og i <span>2 butikker</span></span></p>
+      <div> <!-- Har klassen row i Undersøg -->
+        <img src="images/julekopper.png" alt="Billede af Royal Copenhagen Julekopper">
+        <a id="produktmaerkeId" href="https://salling.dk/brands/royal-copenhagen/c-1389/">ROYAL COPENHAGEN</a> <!-- Er et link til alle mærkets produkter -->
+        <h1 id="beskrivelseAfProduktId">Stjerne Riflet 2-pak Krus, 33cl</h1>
+        <p><strong>Farve: </strong>Grøn</p>
+        <p><strong>Størrelse: </strong>33cl</p>
+        <p><strong>Lagerstatus: </strong>På lager online og i <span>2 butikker</span> </p><span id="butikkerId2"> 2 butikker </span>
+        <p id="prisId">649 kr.</p>
+        <img id="laegVareIKurvId" src="images/laegIKurvKnap.png" alt="Læg varen i kurven">
+        <img id="leveringsmulighederId" src="images/leveringmuligheder.png" alt="Leveringsmuligheder og anden information">
 
-    </article>
+
+        <!-- <p id="test">Afhent inden for to timer</p> --> <!-- BRUGT TIL AT LAVE BILLEDET LEVERINGSMULIGHEDER -->
+      </div>
 
   </main>
   <script src="js/js.js"></script>
