--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
   <nav class="header"> <!-- Class eller id? -->
     <a href="https://salling.dk"><img id="sallingLogoId" src="images/sallingLogo.png" alt="Sallings Logo"></a> <!-- Logo med link til forside -->
     <img id="soegebarId" src="images/søgefunktion.png" alt="Søgebar">
+    <img id="loopId" src="images/loop.png" alt="Billede af loop"> <!-- Vises kun ved mindre skærme -->
     <img id="favoritterId" src="images/favoritLogInKurv.png" alt="Favoritter, Log in, Kurv">
   </nav>
 
@@ -47,19 +48,25 @@
 
   <main>
     <div class="container">
-      <div id="venstreSideId"> <!-- Har klassen row i Undersøg -->
+      <div id="varebilledeId">
         <img src="images/julekopper.png" alt="Billede af Royal Copenhagen Julekopper">
       </div>
 
       <div class="hoejreSideId">
         <a id="produktmaerkeId" href="https://salling.dk/brands/royal-copenhagen/c-1389/">ROYAL COPENHAGEN</a> <!-- Er et link til alle mærkets produkter -->
         <h1 id="beskrivelseAfProduktId">Stjerne Riflet 2-pak Krus, 33 cl</h1>
+
         <p><strong>Farve: </strong>Grøn</p>
         <p><strong>Størrelse: </strong>33cl</p>
         <p><strong>Lagerstatus: </strong> <span id="groenPletId">●</span> På lager online og i <span id="butikkerId">2 butikker</span> </p>
-        <p id="prisId">649 kr.</p>
-        <img id="laegVareIKurvId" src="images/laegIKurvKnap.png" alt="Læg varen i kurven"> <br>
+        
+        <!-- Strong gør skriften fed -->
+        <!-- Span opdeler linjen, så elementerne på linjen kan få forskelligt udseende -->
+
+        <img id="laegVareIKurvId" src="images/laegIKurvKnap.png" alt="Læg varen i kurven"> <br> <!-- br lægger billederne under hinanden -->
+
         <!-- Her skal kanppen til klik&hent være -->
+
         <img id="leveringsmulighederId" src="images/leveringmuligheder.png" alt="Leveringsmuligheder og anden information"> <br> <!-- br lægger billederne under hinanden -->
         <img id="produktbeskrivelseId" src="images/produktbeskrivelse.png" alt="Beskrivelse af produktet">
       </div>
