--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Document</title>
   <link rel="stylesheet" href="css/css.css">
 
-  <!-- Font - Poppins -->
+<!-- Font - Poppins -->
 <style>
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 </style>
@@ -49,7 +49,7 @@
   <main>
     <div class="container">
       <div id="varebilledeId">
-        <img src="images/julekopper.png" alt="Billede af Royal Copenhagen Julekopper">
+        <img src="images/julekopper.png" alt="Billede af Royal Copenhagen Julekopper"> <!-- 50% -->
       </div>
 
       <div class="hoejreSideId">
@@ -67,8 +67,19 @@
 
         <!-- Her skal kanppen til klik&hent være -->
 
+        <a href="popUp.html">
+        <button id="buttonId" type="submit">
+          <span id="tekstIKnapId">Click&Collect</span>
+        </button>
+        </a>
+
+        <!-- Er et alternativ til at lave icons med tekst -->
+        <p></p>
+
         <img id="leveringsmulighederId" src="images/leveringmuligheder.png" alt="Leveringsmuligheder og anden information"> <br> <!-- br lægger billederne under hinanden -->
         <img id="produktbeskrivelseId" src="images/produktbeskrivelse.png" alt="Beskrivelse af produktet">
+
+
       </div>
     </div>
         
